add font awesome 5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "25thMasonicDistrict",
-  "title": "25th Masonic District",
+  "name": "DesignSprint",
+  "title": "Design Sprint Inspiration and Ideas",
   "homepage": "https://mindreeper2420.github.com/DesignSprint",
   "version": "0.1.0",
   "scripts": {
